* July 11, 2011, Kaj de Vos *

Fixed stack misalignment to 16 bytes for SSE instructions in the GLibC startup code assembled
into every program.

* June 17, 2011, Kaj de Vos *

Implemented execution of an extra boot script /system/early-start.sh that completes before
the AppServer is started.

* May 29, 2011, Anthony Morphett *

Patches for errors detected by cppcheck. Thanks to Rui Caridade for contributions.

* March 24, 2011, Kaj de Vos *

SDL-Image configure didn't detect LibPNG and LibTIFF, so it didn't have support for PNG and
TIFF images. The configuration has been extended to fix this. The only way I got the new
combination to work was by making the LibJPEG library dynamic. There are some combinations
left that could be tested, for example in case the problem is with LibTIFF, that is now
being used and uses LibJPEG itself. However, this debugging takes a lot of time, and I have
always thought that forcing the popular image libraries in the system to be static libraries
may be a bridge too far. LibJPEG is used in several places in the base system, so making it
dynamic is the most straigthforward solution, and also makes the system more efficient.

* February 18, 2011, Kaj de Vos *

Changed terminal type to xterm-old, which works somewhat less badly. Tested by Rui.

* June 29, 2010, Anthony Morphett *

Improvements and updates to the dock and dock plugins, including patches from Adam Ritchie.
Changes to navigation in IconViews, patch from chamel
Patch to StringView from Adam Ritchie
Patches to some prefs apps from Adam Ritchie

* June 28, 2010, Anthony Morphett *

Fixed copying & pasting large chunks of data (>32k). Thanks to Rui Caridade for contributions.

* June 25, 2010, Anthony Morphett *

Added Attribute libsyllable class, derived from os::SeekableIO, which provides access to
filesystem attributes via the SeekableIO interface.  This is particularly useful
when combined with os::Settings for storing settings in attributes.

* May 18, 2010, Kaj de Vos *
